# nix-uefi-rust

./: .gitignore  README.md  build.nix  default.nix
.github/workflows/: build.yml
hello/: Cargo.toml
hello/.cargo/: config.toml
hello/src/: main.rs
nix/: sources.json
